--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Artwork/_ViewAll.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Artwork/_ViewAll.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<OnlineArtGallery.Models.Artwork>
-@{ 
+@{
     User User = null;
     if (ViewBag.User != null)
     {
@@ -41,7 +41,7 @@
                                 Art Category
                             </th>
                             <th>
-                                Active
+                                Status
                             </th>
                             @if (User != null && User.UsertypeId == 2)
                             {
@@ -54,59 +54,59 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            ViewBag.Active = item.Active ? "True" : "False";
-                        <tr>
-                            <td>
-                                @item.Id
-                            </td>
-                            <td>
-                                @item.Name
-                            </td>
-                            <td>
-                                @item.CreateDay.ToString("dd/MM/yyyy")
-                            </td>
-                            <td>
-                                <div class="d-flex justify-content-center">
-                                    <img src="~/assets/img/artwork/@item.Image" class="rounded-pill" alt="Alternate Text" style=" height:50px; width: 80px" />
-                                </div>
-                            </td>
-                            <td>
-                                @item.Size
-                            </td>
-                            <td>
-                                @item.DefautPrice
-                            </td>
-                            @if (User != null && User.UsertypeId != 2)
-                            {
+                            ViewBag.Active = item.Active ?  "Available": "Sold";
+                            <tr>
                                 <td>
-                                    @item.Artist.Name
+                                    @item.Id
                                 </td>
-                            }
-
-                            <td>
-                                @item.ArtCategory.Name
-                            </td>
-                            <td class="text-center">@ViewBag.Active</td>
-
-                            @if (User != null && User.UsertypeId == 2)
-                            {
                                 <td>
-                                    <a onclick="showInPopup('@Url.Action("AddOrEdit", "Artwork", new { item.Id }, Context.Request.Scheme)', 'Update Artwork')" class="btn btn-info">@*<i class="fas fa-pencil-alt"></i>*@ Edit</a>
-                                    <form asp-action="Delete" asp-route-id="@item.Id" onsubmit="return jQueryAjaxDelete(this);" class="d-inline">
-                                        <input type="submit" value="Delete" class="btn btn-danger" />
-                                    </form>
-                                    @if (Tools.CheckAuctionExist(item.Id))
+                                    @item.Name
+                                </td>
+                                <td>
+                                    @item.CreateDay.ToString("dd/MM/yyyy")
+                                </td>
+                                <td>
+                                    <div class="d-flex justify-content-center">
+                                        <img src="~/assets/img/artwork/@item.Image" class="rounded-pill" alt="Alternate Text" style=" height:50px; width: 80px" />
+                                    </div>
+                                </td>
+                                <td>
+                                    @item.Size
+                                </td>
+                                <td>
+                                    @item.DefautPrice
+                                </td>
+                                @if (User != null && User.UsertypeId != 2)
+                                {
+                                    <td>
+                                        @item.Artist.Name
+                                    </td>
+                                }
+
+                                <td>
+                                    @item.ArtCategory.Name
+                                </td>
+                                <td class="text-center">@ViewBag.Active</td>
+                                <td>
+                                    @if (User != null && User.UsertypeId == 2 && item.Active == true)
                                     {
-                                        <a href="/auction/list" class="btn btn-dark"><i class="fas fa-angle-double-right"></i></a>
-                                    }
-                                    else
-                                    {
-                                        <a onclick="showInPopup('@Url.Action("AddorEdit", "Auction", new { artworkId = item.Id , artistId = item.ArtistId}, Context.Request.Scheme)', 'Add Auction')" class="btn btn-warning"><i class="fas fa-chevron-circle-right"></i></a>
+
+                                        <a onclick="showInPopup('@Url.Action("AddOrEdit", "Artwork", new { item.Id }, Context.Request.Scheme)', 'Update Artwork')" class="btn btn-info">@*<i class="fas fa-pencil-alt"></i>*@ Edit</a>
+                                        <form asp-action="Delete" asp-route-id="@item.Id" onsubmit="return jQueryAjaxDelete(this);" class="d-inline">
+                                            <input type="submit" value="Delete" class="btn btn-danger" />
+                                        </form>
+                                        @if (Tools.CheckAuctionExist(item.Id))
+                                        {
+                                            <a href="/auction/list" class="btn btn-dark"><i class="fas fa-angle-double-right"></i></a>
+                                        }
+                                        else
+                                        {
+                                            <a onclick="showInPopup('@Url.Action("AddorEdit", "Auction", new { artworkId = item.Id , artistId = item.ArtistId}, Context.Request.Scheme)', 'Add Auction')" class="btn btn-warning"><i class="fas fa-chevron-circle-right"></i></a>
+                                        }
+
                                     }
                                 </td>
-                            }
-
-                        </tr>
+                            </tr>
                         }
                     </tbody>
                 </table>
