--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/NavBarPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/NavBarPartial.cshtml
@@ -1,4 +1,11 @@
-﻿<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+﻿@using Microsoft.AspNetCore.Http;
+@using Newtonsoft.Json;
+
+@{
+    var session = Context.Session.GetString("USER");
+}
+
+<nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -7,9 +14,12 @@
         <li class="nav-item d-none d-sm-inline-block">
             <a href="/index/home" class="nav-link">Home</a>
         </li>
-        <li class="nav-item d-none d-sm-inline-block">
-            <a href="#" class="nav-link">Contact</a>
-        </li>
+        @if (session != null)
+        {
+            <li class="nav-item d-none d-sm-inline-block">
+                <a href="~/index/signout" class="nav-link">Sign out</a>
+            </li>
+        }
     </ul>
 
     <!-- Right navbar links -->
