--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/SignUp.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/SignUp.cshtml
@@ -27,17 +27,6 @@
                     <h2 class="title">SIGN UP</h2>
                     <p>We're happy you're here!</p>
                 </div>
-                <ul class="login-with">
-                    <li>
-                        <a href="#0"><i class="fab fa-facebook"></i>Log in with Facebook</a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fab fa-google-plus"></i>Log in with Google</a>
-                    </li>
-                </ul>
-                <div class="or">
-                    <span>Or</span>
-                </div>
                 <form class="login-form" method="post" onsubmit="return jQueryAjaxPostForRegister(this)">
                     <div class="form-group mb-30">
                         <label for="username"><i class="far fa-envelope"></i></label>
@@ -82,7 +71,7 @@
                 <div class="section-header mb-0">
                     <h3 class="title mt-0">ALREADY HAVE AN ACCOUNT?</h3>
                     <p>Log in and go to your Dashboard.</p>
-                    <a href="sign-in.html" class="custom-button transparent">Login</a>
+                    <a href="./signin" class="custom-button transparent">Login</a>
                 </div>
             </div>
         </div>
