--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/SignIn.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/SignIn.cshtml
@@ -25,18 +25,7 @@
             <div class="left-side">
                 <div class="section-header">
                     <h2 class="title">HI, THERE</h2>
-                    <p>You can log in to your Sbidu account here.</p>
-                </div>
-                <ul class="login-with">
-                    <li>
-                        <a href="#0"><i class="fab fa-facebook"></i>Log in with Facebook</a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fab fa-google-plus"></i>Log in with Google</a>
-                    </li>
-                </ul>
-                <div class="or">
-                    <span>Or</span>
+                    <p>You can log in to your account here.</p>
                 </div>
                 <form class="login-form" method="POST">
                     <div class="form-group mb-30">
@@ -47,9 +36,6 @@
                         <label for="password"><i class="fas fa-lock"></i></label>
                         <input type="password" id="password" name="password" placeholder="Password">
                         <span class="pass-type"><i class="fas fa-eye"></i></span>
-                    </div>
-                    <div class="form-group">
-                        <a href="#0">Forgot Password?</a>
                     </div>
                     <div class="form-group mb-0">
                         <button type="submit" id="btnLogin" class="custom-button">LOG IN</button>
@@ -66,7 +52,7 @@
                 <div class="section-header mb-0">
                     <h3 class="title mt-0">NEW HERE?</h3>
                     <p>Sign up and create your Account</p>
-                    <a href="sign-up.html" class="custom-button transparent">Sign Up</a>
+                    <a href="./signup" class="custom-button transparent">Sign Up</a>
                 </div>
             </div>
         </div>
