--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/User/AddOrEdit.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/User/AddOrEdit.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="AddOrEdit" id="form" asp-route-id="@Model.Id" autocomplete="off">
+        <form asp-action="AddOrEdit" id="add-or-edit" asp-route-id="@Model.Id" autocomplete="off">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" value="@Model.Id" />
             <div class="form-group">
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -62,7 +62,7 @@
 
     var recentUser = JSON.parse('@Html.Raw(JsonConvert.SerializeObject(Tools.GetUserList()))');
     
-    $("#form").on("submit", function () {
+    $("#add-or-edit").on("submit", function () {
         if ($("#Id").val() == 0) {
             for (var i = 0; i < Object.keys(recentUser).length; i++) {
                 if ($("#Username").val() == recentUser[i]["Username"]) {
