--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MainLayout.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MainLayout.cshtml
@@ -1,14 +1,4 @@
-﻿@using Newtonsoft.Json;
-@using Microsoft.AspNetCore.Http;
-@using OnlineArtGallery.Models
-@{
-    if (Context.Session.GetString("USER") != null)
-    {
-        ViewBag.USER = JsonConvert.DeserializeObject(Context.Session.GetString("USER"));
-    }
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <!-- Mirrored from pixner.net/sbidu/main/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 26 Jun 2021 00:46:34 GMT -->
